@@ -39,10 +39,17 @@
     <appender-ref ref="logfile"/>
   </appender>
   
-  <appender name="applicationConsole" class="com.serotonin.m2m2.rt.console.LoggingConsoleAppender">
+  <!-- The application logger that will capture messages for display within the application -->
+   <appender name="applicationConsole" class="com.serotonin.m2m2.rt.console.LoggingConsoleAppender">
     <layout class="org.apache.log4j.PatternLayout">
       <param name="ConversionPattern" value="%-5p %d{ISO8601} (%C.%M:%L) - %m %n"/>
     </layout>
+  </appender>
+
+  <!-- Use an Asynchronous appender to log in a separate thread and save mango time -->
+  <appender name="consoleAsync" class="org.apache.log4j.AsyncAppender">
+    <param name="LocationInfo" value="true"/>
+    <appender-ref ref="applicationConsole"/>
   </appender>
   
   
@@ -62,7 +69,7 @@
     <level value="error"/>
     <appender-ref ref="async"/>
     <appender-ref ref="stdout"/>
-    <appender-ref ref="applicationConsole"/>
+    <appender-ref ref="consoleAsync"/>
   </root>
 
 </log4j:configuration>
