@@ -21,6 +21,7 @@ import javax.sql.DataSource;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.apache.log4j.Logger;
 import org.springframework.jdbc.CannotGetJdbcConnectionException;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.datasource.DataSourceUtils;
@@ -35,9 +36,13 @@ import com.serotonin.m2m2.db.dao.PointValueDaoMetrics;
 import com.serotonin.m2m2.db.dao.PointValueDaoSQL;
 import com.serotonin.m2m2.db.dao.SystemSettingsDao;
 import com.serotonin.m2m2.db.dao.UserDao;
+import com.serotonin.m2m2.db.dao.logging.LoggingDao;
+import com.serotonin.m2m2.db.dao.logging.LoggingDaoMetrics;
+import com.serotonin.m2m2.db.dao.logging.LoggingDaoSQL;
 import com.serotonin.m2m2.db.upgrade.DBUpgrade;
 import com.serotonin.m2m2.module.DatabaseSchemaDefinition;
 import com.serotonin.m2m2.module.ModuleRegistry;
+import com.serotonin.m2m2.rt.console.DatabaseLogAppender;
 import com.serotonin.m2m2.vo.User;
 import com.serotonin.m2m2.vo.permission.DataPointAccess;
 
@@ -89,6 +94,7 @@ abstract public class DatabaseProxy {
     
     public void initialize(ClassLoader classLoader) {
         initializeImpl("");
+
 
         useMetrics = Common.envProps.getBoolean("db.useMetrics",false);
         
@@ -163,6 +169,10 @@ abstract public class DatabaseProxy {
             	noSQLProxy = NoSQLProxyFactory.instance.getProxy();
             	noSQLProxy.initialize();
             }
+            
+            //Can start the Database Log Appender Now
+            Logger rootLogger = Logger.getRootLogger();
+            rootLogger.addAppender(new DatabaseLogAppender(this.noSQLProxy.createLoggingDao()));
             
         }
         catch (CannotGetJdbcConnectionException e) {
@@ -343,6 +353,25 @@ abstract public class DatabaseProxy {
 	 */
 	public NoSQLProxy getNoSQLProxy() {
 		return noSQLProxy;
+	}
+
+	/**
+	 * Get an instance of the Logging Dao
+	 * 
+	 * @return
+	 */
+	public LoggingDao newLoggingDao() {
+        if (noSQLProxy == null){
+        	if(useMetrics)
+        		return new LoggingDaoMetrics(new LoggingDaoSQL());
+        	else
+        		return new LoggingDaoSQL();
+        }else{
+        	if(useMetrics)
+        		return new LoggingDaoMetrics(noSQLProxy.createLoggingDao());
+        	else
+        		return noSQLProxy.createLoggingDao();
+        }
 	}
     
     
