@@ -1,4 +1,7 @@
 *Version 2.3.1*
+* Slight improvements to the UI table auto formatting
+* Added Database storage for Logs
+* Added NoSQL access for log storage
 
 *Version 2.3.0*
 * Added purge now options to all data sources
